fix(DependencyExportTask): do not assume gradle cache
Do not assume artifact resolves to the gradle cache, it may be an url to the repository, e.g. Maven local