@@ -17,6 +17,7 @@ import com.canonical.rockcraft.builder.DependencyOptions;
 import org.gradle.api.DefaultTask;
 import org.gradle.api.artifacts.ArtifactCollection;
 import org.gradle.api.artifacts.Configuration;
+import org.gradle.api.artifacts.Dependency;
 import org.gradle.api.artifacts.ModuleVersionIdentifier;
 import org.gradle.api.artifacts.component.ComponentIdentifier;
 import org.gradle.api.artifacts.component.ModuleComponentIdentifier;
@@ -24,13 +25,14 @@ import org.gradle.api.artifacts.dsl.DependencyHandler;
 import org.gradle.api.artifacts.result.ArtifactResolutionResult;
 import org.gradle.api.artifacts.result.ArtifactResult;
 import org.gradle.api.artifacts.result.ComponentArtifactsResult;
-import org.gradle.api.artifacts.result.DependencyResult;
 import org.gradle.api.artifacts.result.ResolvedArtifactResult;
 import org.gradle.api.file.DirectoryProperty;
+import org.gradle.api.internal.artifacts.DefaultModuleIdentifier;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
 import org.gradle.api.tasks.OutputDirectory;
 import org.gradle.api.tasks.TaskAction;
+import org.gradle.internal.component.external.model.DefaultModuleComponentIdentifier;
 import org.gradle.maven.MavenModule;
 import org.gradle.maven.MavenPomArtifact;
 
@@ -40,10 +42,11 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
-import java.util.Optional;
+import java.util.Set;
 import java.util.StringTokenizer;
 
 /**
@@ -86,37 +89,57 @@ public abstract class DependencyExportTask extends DefaultTask {
                 logger.warn(String.format("Configuration %s can not be resolved. skipped.", config.getName()));
                 continue;
             }
-            copyConfiguration(config, getProject().getDependencies());
+            PomDependencyReader pomDependencyReader = new PomDependencyReader(getProject().getDependencies(),
+                    getProject().getConfigurations());
+            copyConfiguration(pomDependencyReader, config, getProject().getDependencies());
         }
         // export build script dependencies
+        final PomDependencyReader pomDependencyReader = new PomDependencyReader(getProject().getDependencies(),
+                getProject().getConfigurations());
+
         this.getProject()
                 .getBuildscript()
                 .getConfigurations()
                 .forEach( x ->
-                        copyConfiguration(x, getProject().getBuildscript().getDependencies()));
+                        copyConfiguration(pomDependencyReader, x, getProject().getBuildscript().getDependencies()));
     }
 
     @SuppressWarnings({"unchecked", "rawtypes"})
-    private void copyConfiguration(Configuration files, DependencyHandler handler) {
+    private void copyConfiguration(PomDependencyReader pomDependencyReader, Configuration files, DependencyHandler handler) {
         try {
             copyArtifacts(files.getIncoming().getArtifacts());
             // resolve and copy POM files
             Path outputLocationRoot = getOutputDirectory().getAsFile().get().toPath();
-            HashSet<ComponentIdentifier> ids = new HashSet<ComponentIdentifier>();
-            for (DependencyResult result : files.getIncoming().getResolutionResult().getAllDependencies()) {
-                ids.add(result.getFrom().getId());
-                logger.debug("Looking up POM for "+ result.getFrom().getId());
+            HashSet<ComponentIdentifier> workQueue = new HashSet<ComponentIdentifier>();
+            for (Dependency result : files.getAllDependencies()) {
+                if (result.getVersion() != null) {
+                    ModuleComponentIdentifier id = DefaultModuleComponentIdentifier.newId(DefaultModuleIdentifier.newId(result.getGroup(), result.getName()), result.getVersion());
+                    workQueue.add(DefaultModuleComponentIdentifier.newId(DefaultModuleIdentifier.newId(result.getGroup(), result.getName()), result.getVersion()));
+                    logger.debug("Looking up POM for "+ id);
+                }
             }
-            ArtifactResolutionResult artifacts = handler
-                    .createArtifactResolutionQuery()
-                    .forComponents(ids)
-                    .withArtifacts(MavenModule.class, new Class[]{MavenPomArtifact.class})
-                    .execute();
-            for(ComponentArtifactsResult component : artifacts.getResolvedComponents()) {
-                if (component.getId() instanceof ModuleComponentIdentifier) {
-                    for(ArtifactResult artifact : component.getArtifacts(MavenPomArtifact.class)) {
-                        logger.debug("Found artifact "+ artifact.getId());
-                        copyFromGradleCache(((ResolvedArtifactResult)artifact), outputLocationRoot);
+            HashSet<ComponentIdentifier> resolved = new HashSet<ComponentIdentifier>();
+            while (!workQueue.isEmpty()) {
+                ArtifactResolutionResult artifacts = handler
+                        .createArtifactResolutionQuery()
+                        .forComponents(workQueue)
+                        .withArtifacts(MavenModule.class, new Class[]{MavenPomArtifact.class})
+                        .execute();
+                resolved.addAll(workQueue);
+                workQueue.clear();
+                for (ComponentArtifactsResult component : artifacts.getResolvedComponents()) {
+                    if (component.getId() instanceof ModuleComponentIdentifier) {
+                        for (ArtifactResult artifact : component.getArtifacts(MavenPomArtifact.class)) {
+                            logger.debug("Found artifact " + artifact.getId());
+                            copyToMavenRepository(((ResolvedArtifactResult) artifact), outputLocationRoot);
+                            // resolve maven dependencies to fetch poms
+                            Set<ComponentIdentifier> componentIds = pomDependencyReader.read(((ResolvedArtifactResult) artifact).getFile());
+                            for (ComponentIdentifier ci : componentIds){
+                                if (!resolved.contains(ci)) {
+                                    workQueue.add(ci);
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -129,11 +152,11 @@ public abstract class DependencyExportTask extends DefaultTask {
     private void copyArtifacts(ArtifactCollection artifacts) throws IOException {
         Path outputLocationRoot = getOutputDirectory().getAsFile().get().toPath();
         for (ResolvedArtifactResult result : artifacts.getArtifacts()) {
-            copyFromGradleCache(result, outputLocationRoot);
+            copyToMavenRepository(result, outputLocationRoot);
         }
     }
 
-    private void copyFromGradleCache(ResolvedArtifactResult resolvedArtifact, Path outputLocationRoot ) throws IOException {
+    private void copyToMavenRepository(ResolvedArtifactResult resolvedArtifact, Path outputLocationRoot ) throws IOException {
         File f = resolvedArtifact.getFile();
         StringTokenizer tk = new StringTokenizer(resolvedArtifact.getId().getComponentIdentifier().getDisplayName(), ":");
         String group = null;
@@ -148,46 +171,38 @@ public abstract class DependencyExportTask extends DefaultTask {
         if (tk.hasMoreTokens()) {
             version = tk.nextToken();
         }
-        copyFromGradleCache(f, group, name, version, outputLocationRoot);
+        copyToMavenRepository(f, group, name, version, outputLocationRoot);
     }
 
-    private void copyFromGradleCache(File f, String group, String name, String version, Path outputLocationRoot ) throws IOException {
-        // gradle cache stores artifacts in <artifact>/<sha1>/<file> directory structure
-        File componentLocation = f.getParentFile().getParentFile();
-        StringBuilder relativePath = new StringBuilder();
-        if (group != null) {
-            relativePath.append(group.replace('.', File.separatorChar));
+    private void copyToMavenRepository(File f, String group, String name, String version, Path outputLocationRoot ) throws IOException {
+        if (group == null || name == null || version == null) {
+            throw new IllegalArgumentException(String.format("Group, name and version should be set for the artifact %s:%s:%s", group, name, version));
         }
-        if (name != null) {
-            relativePath.append(File.separatorChar);
-            relativePath.append(name);
-        }
-        if (version != null) {
-            relativePath.append(File.separatorChar);
-            relativePath.append(version);
-        }
+        Path outputLocation = outputLocationRoot.resolve(String.format("%s/%s/%s", group.replace('.', '/'), name, version));
+        outputLocation.toFile().mkdirs();
+        Path destinationFile = outputLocation.resolve(f.getName());
+        Files.copy(f.toPath(), destinationFile, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
 
-        Path outputLocation = outputLocationRoot.resolve(relativePath.toString());
-        File[] components = componentLocation.listFiles();
-        if (components == null) {
-            return;
+        try {
+            Path digestFile = Path.of(destinationFile.toString() + ".sha1");
+            String hash = computeHash(destinationFile, "sha1");
+            String paddedSha1 = String.format("%40s", hash).replace(' ', '0');
+            Files.writeString(digestFile, paddedSha1);
+        } catch (NoSuchAlgorithmException e) {
+            throw new RuntimeException(e);
         }
-        for (File component : components) {
-            File[] files = component.listFiles();
-            if (files == null) {
-                continue;
-            }
-            Optional<File> file = Arrays.stream(files).findFirst();
-            if (file.isEmpty()) {
-                continue;
-            }
-            outputLocation.toFile().mkdirs();
-            Path output = outputLocation.resolve(file.get().getName());
-            Files.copy(file.get().toPath(), output, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
-            Path outputSha1 = Path.of(output.toFile().getAbsolutePath() + ".sha1");
-            String paddedSha1 = String.format("%40s", component.getName()).replace(' ', '0');
-            Files.writeString(outputSha1, paddedSha1);
-            logger.debug(String.format("Written %s and corresponding sha1", output));
+        logger.debug(String.format("Written %s and corresponding sha1", destinationFile));
+    }
+
+    private static String computeHash(Path filePath, String alg) throws IOException, NoSuchAlgorithmException {
+        MessageDigest digest = MessageDigest.getInstance(alg);
+        byte[] bytes = Files.readAllBytes(filePath);
+        digest.update(bytes, 0, bytes.length);
+        byte[] hash = digest.digest();
+        StringBuilder hexString = new StringBuilder();
+        for (byte b : hash) {
+            hexString.append(String.format("%02x", b));
         }
+        return hexString.toString();
     }
 }
